# these files will be installed ${data}/aria/ directory
# that is usually "/usr/share/aria/"
pkgdata_DATA = rc.aria\
               command.aria\
               server.aria\
               useragent.aria\
               command.aria.template.gz\
               server.aria.template.gz\
               server.aria.template.euc.gz

EXTRA_DIST = rc.aria\
             command.aria\
             server.aria\
             useragent.aria\
             command.aria.template.gz\
             server.aria.template.gz\
             server.aria.template.euc.gz

