EXTRA_DIST = ARIA_LOGO.xpm\
             complete.xpm\
             config.xpm\
             config_all.xpm\
             divide.xpm\
             download.xpm\
             error.xpm\
             lock.xpm\
             lockon.xpm\
             movedown.xpm\
             moveup.xpm\
             newlist.xpm\
             open.xpm\
             paste.xpm\
             pause.xpm\
             pause_all.xpm\
             ready.xpm\
             restart.xpm\
             save.xpm\
             speed.xpm\
             start.xpm\
             start_all.xpm\
             stop.xpm\
             track.xpm\
             trash.xpm\
             unlock.xpm\
             url_list.xpm\
             progress_bar.h
